<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">运动页</string>
    <string name="constacts">通讯录</string>
    <string name="me">我</string>
    <string name="discover">发现</string>
    <string name="back">返回</string>
    <string name="chat">聊天</string>
    <string name="no_msg">暂时没有新消息</string>
    <string name="settings">设置</string>
    <string name="watchword">注册 sportspage, 运动由此改变</string>
    <string name="or">或</string>
    <string name="wechat_login">微信登录</string>
    <string name="use_phone_reg">使用手机号注册</string>
    <string name="have_userid">已经有账户了？登录。</string>
    <string name="use_wechat_login">使用微信登录</string>
    <string name="no_userid_reg">还没有账户？注册。</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="password_6_20">6-20位密码</string>
    <string name="login">登录</string>
    <string name="forget_and_reset_pwd">忘记登录信息？重置密码</string>
    <string name="verify">验证码</string>
    <string name="register">注册</string>
    <string name="get_verify">获取验证码</string>
    <string name="rest_password">重置密码</string>
    <string name="click_back">点我返回。</string>
    <string name="uninstall_wechat">微信没有安装，请先安装</string>
    <string name="login_failure">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="network_error">网络出了一点问题</string>
    <string name="new_frend">新的好友</string>
    <string name="my_group">我的群组</string>
    <string name="search">搜索</string>
    <string name="detail_info">详细信息</string>
    <string name="setting_remark">设置备注</string>
    <string name="more">更多</string>
    <string name="add_blacklist">加入黑名单</string>
    <string name="complain">投诉</string>
    <string name="delete">删除</string>
    <string name="friend_setting">资料设置</string>
    <string name="delete_success">删除成功</string>
    <string name="please_input_userId">请输入用户Id</string>
    <string name="add">添加</string>
    <string name="add_friend">+好友</string>
    <string name="add_success">添加成功</string>
    <string name="wait_confirm">等待对方确认</string>
    <string name="my_wallet">我的钱包</string>
    <string name="wallet_balance">钱包余额</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="cashbook">记账本</string>
    <string name="recharge_way">充值方式</string>
    <string name="weixin_pay">微信支付</string>
    <string name="please_input_money">请输入充值金额</string>
    <string name="recharge_money">充值金额</string>
    <string name="recharge_at_once">立即充值</string>
    <string name="alipay_id">支付宝账号</string>
    <string name="please_input_alipay">请输入支付宝账号</string>
    <string name="withdraw_num">提现金额</string>
    <string name="yuan">元</string>
    <string name="comfirm_withdraw">确认提现</string>
    <string name="balance">余额</string>
    <string name="account_name">账号姓名</string>
    <string name="please_input_name">请输入账号姓名</string>
    <string name="all_withdraw">全部提现</string>
    <string name="withdraw_success">提现成功</string>
    <string name="withdraw_failure">提现失败</string>
    <string name="de_dialog_item_message_delete">删除消息</string>
    <string name="contact_notification_someone_agree_your_request">%1$s已同意你的好友请求</string>
    <string name="ac_new_friend_list_no_data">暂无数据</string>
    <string name="agree">接&#160;&#160;&#160;受</string>
    <string name="request">已请求</string>
    <string name="ignore">已忽略</string>
    <string name="added">已添加</string>
    <string name="deleted">已删除</string>
    <string name="new_friends">新的朋友</string>
    <string name="hot">热门</string>
    <string name="focus">关注</string>
    <string name="cash_detail">账单明细</string>
    <string name="yu">余额：</string>
    <string name="sport">运动</string>
    <string name="sport_record">运动记录</string>
    <string name="proceed">进行中</string>
    <string name="settle">待结算</string>
    <string name="evaluation">待评价</string>
    <string name="page">运动页</string>
    <string name="sport_page_record">运动页记录</string>
    <string name="create_record">创建记录</string>
    <string name="create_sport">创建运动</string>
    <string name="new_message">最新动态</string>
    <string name="all_record">全部记录</string>
    <string name="setting">设置</string>
    <string name="msg_notfication">消息通知</string>
    <string name="change_password">修改密码</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="about">关于我们</string>
    <string name="system_setting">系统设置</string>
    <string name="logout_sucess">退出成功</string>
    <string name="rev_new_msg_notification">接受新消息通知</string>
    <string name="show_msg_detail">显示消息详情</string>
    <string name="voice">声音</string>
    <string name="msg_no_disturbing">消息免打扰</string>
    <string name="vibration">振动</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="logout">退出当前账号</string>
    <string name="verify_code">验证码</string>
    <string name="please_input_verify">请输入验证码</string>
    <string name="new_password">新密码</string>
    <string name="please_input_newpwd">请输入新密码</string>
    <string name="confirm_new_pwd">确认新密码</string>
    <string name="please_input_newpwd_again">请再次输入新密码</string>
    <string name="finish_change">完成修改</string>
    <string name="change_sucess">修改成功</string>
    <string name="advise_describe">我们非常重视您给我们提出宝贵的意见，帮助我们不断完善产品，谢谢！</string>
    <string name="feedback_sucess">反馈成功</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_focus">+关注</string>
    <string name="share">分享</string>
    <string name="message">留言</string>
    <string name="next_step">下一步</string>
    <string name="please_input_detail_describe">请在此输入详情描述</string>
    <string name="theme_describe">主题描述</string>
    <string name="select_sport_type">选择运动项目</string>
    <string name="set_sport_address">设置运动地址</string>
    <string name="please_name_your_sport">请给你的运动起个名字(限定12个字内)</string>
    <string name="complete">完成</string>
    <string name="sport_level">运动等级</string>
    <string name="start_date">开始日期</string>
    <string name="person_num">人数范围</string>
    <string name="sport_charge">活动价格</string>
    <string name="pay_way">收费方式</string>
    <string name="online">线上</string>
    <string name="offline">线下</string>
    <string name="is_private">是否公开</string>
    <string name="comfirm">确认</string>
    <string name="start_time">开始时间</string>
    <string name="sports_record">运动记录</string>
    <string name="improve_success">完善成功</string>
    <string name="improve_info">绑定成功</string>
    <string name="custom">自定义</string>
    <string name="address">地址</string>
    <string name="money">价格</string>
    <string name="creator">发起人</string>
    <string name="just_pay">立即支付</string>
    <string name="balance_pay">余额支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="pay_password">支付密码</string>
    <string name="please_input_pay_password">请输入支付密码</string>
    <string name="set_pay_password">设置支付密码</string>
    <string name="set_sucess">设置成功</string>
    <string name="free">免费</string>
    <string name="my_sports_page">我的运动页</string>
    <string name="all_focus">全部关注</string>
    <string name="enroll_user">参与人</string>
    <string name="defualt_user">Tenma</string>
    <string name="view_info">查看资料</string>
    <string name="add_friends">添加好友</string>
    <string name="create_group">创建群组</string>
    <string name="cancel">取消</string>
    <string name="please_input_group_name">请填写群名称</string>
    <string name="please_input_group_intro">请填写群介绍</string>
    <string name="enroll_num">参与人数</string>
    <string name="settle_money">线上结算金额</string>
    <string name="comfirm_settle">确认结算</string>
    <string name="click_change_head">点击修改头像</string>
    <string name="username">用户名</string>
    <string name="nick">昵称</string>
    <string name="sex">性别</string>
    <string name="phone">手机</string>
    <string name="wechat">微信</string>
    <string name="mail">邮箱</string>
    <string name="personal_info">个人信息</string>
    <string name="region">地区</string>
    <string name="checked">已选择</string>
    <string name="defaultRegion">北京 北京 海淀</string>

    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="protocol">登陆注册表明您同意【运动页服务协议】</string>
    <string name="title_activity_change_sports_page">ChangeSportsPageActivity</string>
</resources>
