<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pay_password"
    android:layout_width="match_parent"
    android:background="@color/bg_layout"
    android:layout_height="match_parent"
    tools:context="com.sportspage.activity.PayPasswordActivity">

    <include android:id="@+id/layout_ppwd_title"
        layout="@layout/layout_title" />

    <RelativeLayout
        android:id="@+id/rl_ppwd_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/other_item_height"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:background="@color/white"
        android:layout_below="@+id/layout_ppwd_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tv_ppwd_phone"
            android:layout_width="@dimen/tv_change_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="left"
            android:minWidth="40dp"
            android:text="@string/phone_num"/>

        <EditText
            android:id="@+id/et_ppwd_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_ppwd_phone"
            android:background="@null"
            android:layout_marginLeft="@dimen/change_edittext_margin"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:textSize="14sp"
            android:textColorHint="@color/gray"
            android:hint="@string/please_input_phone"

            />

        <Button
            android:id="@+id/btn_ppwd_getverify"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_bg_blue"
            android:text="@string/get_verify"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#DBDBDB" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_ppwd_verify"
        android:layout_below="@id/rl_ppwd_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/other_item_height"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/tv_ppwd_verify"
            android:layout_width="@dimen/tv_change_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/verify_code"/>

        <EditText
            android:id="@+id/et_ppwd_verify"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_ppwd_verify"
            android:background="@null"
            android:layout_marginLeft="@dimen/change_edittext_margin"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:textSize="14sp"
            android:textColorHint="@color/gray"
            android:hint="@string/please_input_verify"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#DBDBDB" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_ppwd_newpwd"
        android:layout_below="@id/rl_ppwd_verify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/other_item_height"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/tv_ppwd_newpwd"
            android:layout_width="@dimen/tv_change_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/pay_password"/>

        <EditText
            android:id="@+id/et_ppwd_newpwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_ppwd_newpwd"
            android:background="@null"
            android:layout_marginLeft="@dimen/change_edittext_margin"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:textSize="14sp"
            android:maxLength="6"
            android:inputType="numberPassword"
            android:textColorHint="@color/gray"
            android:hint="@string/please_input_pay_password"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#DBDBDB" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_ppwd_again"
        android:layout_below="@id/rl_ppwd_newpwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/other_item_height"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/tv_ppwd_again"
            android:layout_width="@dimen/tv_change_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/confirm_new_pwd"/>

        <EditText
            android:id="@+id/et_ppwd_again"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_ppwd_again"
            android:background="@null"
            android:layout_marginLeft="@dimen/change_edittext_margin"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:textSize="14sp"
            android:maxLength="6"
            android:inputType="numberPassword"
            android:textColorHint="@color/gray"
            android:hint="@string/please_input_newpwd_again"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#DBDBDB" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_ppwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/other_item_height"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="54dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_bg_blue"
        android:text="@string/comfirm"
        android:textColor="@color/white"
        />

</com.zhy.autolayout.AutoRelativeLayout>
