<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:background="@color/bg_layout"
    android:layout_height="match_parent"
    tools:context="com.sportspage.activity.ChangePasswordActivity">

    <include android:id="@+id/layout_change_title"
        layout="@layout/layout_title" />

    <RelativeLayout
        android:id="@+id/rl_change_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/other_item_height"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:background="@color/white"
        android:layout_below="@+id/layout_change_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tv_change_phone"
            android:layout_width="@dimen/tv_change_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="left"
            android:minWidth="40dp"
            android:text="@string/phone_num"/>

        <EditText
            android:id="@+id/et_change_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_change_phone"
            android:background="@null"
            android:layout_marginLeft="@dimen/change_edittext_margin"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:textSize="14sp"
            android:inputType="phone"
            android:imeOptions="actionNext"
            android:textColorHint="@color/gray"
            android:hint="@string/please_input_phone"

            />

        <Button
            android:id="@+id/btn_change_getverify"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_bg_blue"
            android:text="@string/get_verify"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#DBDBDB" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_change_verify"
        android:layout_below="@id/rl_change_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/other_item_height"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/tv_change_verify"
            android:layout_width="@dimen/tv_change_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/verify_code"/>

        <EditText
            android:id="@+id/et_change_verify"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_change_verify"
            android:background="@null"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:layout_marginLeft="@dimen/change_edittext_margin"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:textSize="14sp"
            android:textColorHint="@color/gray"
            android:hint="@string/please_input_verify"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#DBDBDB" />
    </RelativeLayout>

    <RelativeLayout
    android:id="@+id/rl_change_newpwd"
    android:layout_below="@id/rl_change_verify"
    android:layout_width="match_parent"
    android:layout_height="@dimen/other_item_height"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/tv_change_newpwd"
        android:layout_width="@dimen/tv_change_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/new_password"/>

    <EditText
        android:id="@+id/et_change_newpwd"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/tv_change_newpwd"
        android:background="@null"
        android:layout_marginLeft="@dimen/change_edittext_margin"
        android:layout_centerVertical="true"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:textSize="14sp"
        android:textColorHint="@color/gray"
        android:hint="@string/please_input_newpwd"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_alignParentBottom="true"
        android:background="#DBDBDB" />
</RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_change_again"
        android:layout_below="@id/rl_change_newpwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/other_item_height"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/tv_change_again"
            android:layout_width="@dimen/tv_change_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/confirm_new_pwd"/>

        <EditText
            android:id="@+id/et_change_again"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_change_again"
            android:background="@null"
            android:layout_marginLeft="@dimen/change_edittext_margin"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:textSize="14sp"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:textColorHint="@color/gray"
            android:hint="@string/please_input_newpwd_again"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#DBDBDB" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_change"
        android:layout_width="match_parent"
        android:layout_height="@dimen/other_item_height"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="54dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_bg_blue"
        android:text="@string/finish_change"
        android:textColor="@color/white"
        />

</com.zhy.autolayout.AutoRelativeLayout>
